# SecOC-lite

./: .gitignore  CMakeLists.txt  README.md  build.bat
doc/: 接口文档.md  测试文档.md
include/: ComStack_Types.h  Compiler.h  Compiler_Cfg.h  masterFVM.h  platform_Types.h  slaveFVM.h
master/include/: Compiler_Cfg.h  MacGenerate.h  MasterFVM_Cfg.h  MasterFVM_Types.h  masterFVM.h  sm4.h
master/src/: MasterFVM_Cfg.c  masterFVM.c  sm4.c
slave/include/: slaveFVM.h  slaveFVM_Cfg.h
slave/src/: Csm.c  masterFVM.c  slaveFVM.c  slaveFVM_Cfg.c  slaveFVM_Cfg.h  sm4.c
src/: Csm.c  MacGenerate.c  masterFVM.c  slaveFVM.c  slaveFVM.h  sm4.c  接口文档.md  测试文档.md
test/: test.c  test_bitmap.c  test_master.c  test_master.cpp  test_slave.c
utils/: bitmap.c  bitmap.h  tools.c  tools.h
